objects/Facility_Check_List_Labels_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Field_API_Name_s_1_CSV__c</fullName>
        <label>Field API Name(s) 1 (CSV)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field_API_Name_s_2_CSV__c</fullName>
        <label>Field API Name(s) 2 (CSV)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Section_Label__c</fullName>
        <label>Section Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <label>SortOrder</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Section_Label__c</fullName>
        <label>Sub Section Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Facility Check List Labels Settings</label>
</CustomObject>